fix single-pilot "other posts" section and hr spacing

--- a/src/scss/components/_available.scss
+++ b/src/scss/components/_available.scss
@@ -56,6 +56,6 @@
 }
 hr{
   display:block;
-  margin-top:100px;
-  margin-bottom:100px;
+  margin:50px 0;
+
 }
