--- a/src/scss/components/single/_page.scss
+++ b/src/scss/components/single/_page.scss
@@ -41,7 +41,7 @@ body.page{
             >p{
                 font-size: 3.4rem;
                 line-height: 1em;
-                font-weight: 400;
+                font-weight: 800;
                 font-family: $heading-font-family;
                 text-transform: uppercase;
             }
